--- a/src/app/Admin/admin/documents/documents-list/documents.component.html
+++ b/src/app/Admin/admin/documents/documents-list/documents.component.html
@@ -15,7 +15,7 @@
 
     <div class="category-filter">
         <label for="categoryFilter">Lọc theo danh mục:</label>
-        <select id="categoryFilter" [(ngModel)]="selectedCategoryId" (change)="onCategoryChange($event)" >
+        <select id="categoryFilter" [(ngModel)]="selectedCategoryId" (change)="onCategoryChange($event)">
             <option [value]="null">Tất cả danh mục</option>
             <ng-container *ngFor="let category of category_documents">
                 <option [value]="category.id_category_document">{{ category.name_category_document }}</option>
@@ -26,11 +26,12 @@
             </ng-container>
         </select>
     </div>
-    
-    
+
+
     <ng-template #categoryOptions let-children="$implicit" let-level="level">
         <ng-container *ngFor="let child of children">
-            <option [value]="child.id_category_document">{{ '—'.repeat(level) }} {{ child.name_category_document }}</option>
+            <option [value]="child.id_category_document">{{ '—'.repeat(level) }} {{ child.name_category_document }}
+            </option>
             <ng-container *ngIf="child.children && child.children.length > 0">
                 <ng-container
                     *ngTemplateOutlet="categoryOptions; context: { $implicit: child.children, level: level + 1 }"></ng-container>
@@ -41,23 +42,25 @@
 </div>
 
 <div *ngIf="successMessage" class="alert alert-success alert-border-left alert-dismissible fade show" role="alert">
-    <i class="ri-notification-off-line me-2 align-middle"></i> 
+    <i class="ri-notification-off-line me-2 align-middle"></i>
     <strong>Thông báo: </strong> {{ successMessage }}
     <button type="button" class="btn-close" (click)="successMessage=''"></button>
 </div>
 
 <div class="controls">
     <div>
-        <button type="button" class="btn btn-danger" (click)="deleteSelectedDocuments()" style="background-color: #ffffff; font-weight: 600; color: black;">
+        <button type="button" class="btn btn-danger" (click)="deleteSelectedDocuments()"
+            style="background-color: #fc8181; font-weight: 600; color: black;">
             <i class="bi bi-trash" style="padding: 0px 10px; color: red;"></i>XÓA TẤT CẢ
-        </button>        
+        </button>
     </div>
 
-    <button type="button" class="btn btn-primary" (click)="openCreateModal()" style="padding: 6px 30px; background-color: #ffffff; font-weight: 600; color: black;">
+    <button type="button" class="btn btn-primary" (click)="openCreateModal()"
+        style="padding: 6px 30px; background-color: #90cdf4; font-weight: 600; color: black;">
         <i class="bi bi-plus-circle" style="padding: 0px 10px; color: blue;"></i>
         THÊM MỚI
     </button>
-    
+
     <div class="export-options">
         <select class="form-select" [(ngModel)]="exportOption" (change)="handleExport()">
             <option value="" selected>Chọn hành động</option>
@@ -98,7 +101,8 @@
 
 
 <!-- Modal thêm/sửa -->
-<div class="modal fade" id="categoryModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="categoryModalLabel" aria-hidden="true">
+<div class="modal fade" id="categoryModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="categoryModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" style="max-width: 1200px;">
         <div class="modal-content">
             <div class="modal-header">
@@ -113,35 +117,44 @@
                 <div *ngIf="errorMessage" class="alert alert-danger text-center">
                     {{ errorMessage }}
                 </div>
-                
+
                 <form (ngSubmit)="saveDocuments()">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
-                                <label for="title" class="form-label" style="font-weight: bold;">Tên Văn bản - Pháp luât:</label>
-                                <input type="text" class="form-control" [(ngModel)]="documentsForm.title" name="title" required />
+                                <label for="title" class="form-label" style="font-weight: bold;">Tên Văn bản - Pháp
+                                    luât:</label>
+                                <input type="text" class="form-control" [(ngModel)]="documentsForm.title" name="title"
+                                    required />
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
-                                <label for="description" class="form-label" style="font-weight: bold;">Mô tả ngắn: </label>
-                                <textarea class="form-control" [(ngModel)]="documentsForm.description_short" name="description_short" rows="3" required></textarea>
+                                <label for="description" class="form-label" style="font-weight: bold;">Mô tả ngắn:
+                                </label>
+                                <textarea class="form-control" [(ngModel)]="documentsForm.description_short"
+                                    name="description_short" rows="3" required></textarea>
                             </div>
                         </div>
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
-                                <label for="content" class="form-label" style="font-weight: bold;">Nội dung chính: </label>
-                                <textarea class="form-control" [(ngModel)]="documentsForm.description" name="description" rows="4" required></textarea>
+                                <label for="content" class="form-label" style="font-weight: bold;">Nội dung chính:
+                                </label>
+                                <textarea class="form-control" [(ngModel)]="documentsForm.description"
+                                    name="description" rows="4" required></textarea>
                             </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
-                                <label for="documentParentId" class="form-label" style="font-weight: bold;">Chọn danh mục: </label>
-                                <select class="form-select" [(ngModel)]="documentsForm.id_category_document" name="documentParentId">
+                                <label for="documentParentId" class="form-label" style="font-weight: bold;">Chọn danh
+                                    mục: </label>
+                                <select class="form-select" [(ngModel)]="documentsForm.id_category_document"
+                                    name="documentParentId">
                                     <option [value]="null">Không có cha (Cấp cao nhất)</option>
                                     <ng-container *ngFor="let category of category_documents">
-                                        <option [value]="category.id_category_document">{{ category.name_category_document }}</option>
+                                        <option [value]="category.id_category_document">{{
+                                            category.name_category_document }}</option>
                                         <ng-container *ngIf="category.children && category.children.length > 0">
                                             <ng-container
                                                 *ngTemplateOutlet="categoryOptions; context: { $implicit: category.children }"></ng-container>
@@ -154,33 +167,36 @@
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
                                 <label for="account" style="font-weight: bold;">Tài khoản của bạn</label>
-                                <select [(ngModel)]="documentsForm.id_account" name="id_account" class="form-select d-inline-block">
+                                <select [(ngModel)]="documentsForm.id_account" name="id_account"
+                                    class="form-select d-inline-block">
                                     <option [value]="id_account">{{ username }}</option>
                                 </select>
                             </div>
                         </div>
-                        
+
                         <div class="col-md-12">
                             <div class="mb-3" style="padding: 0px 10px;">
-                                <label for="file_path" class="form-label" style="font-weight: bold;">Chọn file PDF</label>
+                                <label for="file_path" class="form-label" style="font-weight: bold;">Chọn file
+                                    PDF</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" [(ngModel)]="selectedPdfName" name="selectedPdfName" readonly
-                                        placeholder="Chưa chọn file PDF">
+                                    <input type="text" class="form-control" [(ngModel)]="selectedPdfName"
+                                        name="selectedPdfName" readonly placeholder="Chưa chọn file PDF">
                                     <button class="btn btn-primary" type="button" (click)="openPdfSelectorModal()">
                                         <i class="bi bi-folder"></i> Chọn file từ thư mục
                                     </button>
                                 </div>
                             </div>
                         </div>
- 
+
                     </div>
                     <button type="submit" class="btn btn-primary me-2" style="padding: 5px 30px; margin-left: 520px;">
                         <i class="bi bi-save" style="padding: 0px 10px;"></i>{{ isEditMode ? 'Cập nhật' : 'Lưu' }}
                     </button>
-                </form>                
+                </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" (click)="hideModal(getModalInstance('categoryModal'))">Đóng</button>
+                <button type="button" class="btn btn-secondary"
+                    (click)="hideModal(getModalInstance('categoryModal'))">Đóng</button>
             </div>
         </div>
     </div>
@@ -229,11 +245,11 @@
                 </th>
                 <th>STT</th>
                 <th>Tên văn bản</th>
-                <th>Danh mục</th> 
+                <th>Danh mục</th>
                 <th>Mô tả ngắn </th>
                 <th>Nội dung chính</th>
                 <th>Ngày tạo</th>
-                <th>Tài khoản</th> 
+                <th>Tài khoản</th>
                 <th>Thư mục</th>
                 <th>Hành động</th>
                 <th>Trạng thái</th>
@@ -247,19 +263,22 @@
                 </td>
                 <td>{{ (page - 1) * pageSize + i + 1 }}</td>
                 <td>{{ truncateHTML(documentss.title, 30) }}</td>
-                <td>{{ getCategoryFullName(documentss)}}</td> <!-- Hiển thị tên danh mục -->                
+                <td>{{ getCategoryFullName(documentss)}}</td> <!-- Hiển thị tên danh mục -->
                 <td>{{ truncateHTML(documentss.description_short, 50) }}</td>
                 <td>{{ truncateHTML(documentss.description, 50) }}</td>
                 <td>{{ documentss.create_at | date: 'dd-MM-yyyy' }}</td>
                 <td>{{ getAccounts_Name(documentss.id_account) }}</td>
                 <td>{{ documentss.file_path}}</td>
                 <td>
-                    <button class="btn btn-primary btn-sm me-2" (click)="openEditModal(documentss)"><i class="bi bi-pencil"></i></button>
-                    <button class="btn btn-danger btn-sm me-2" (click)="DeleteDocuments(documentss.id_document)"><i class="bi bi-trash"></i></button>
-                </td>  
+                    <button class="btn btn-primary btn-sm me-2" (click)="openEditModal(documentss)"><i
+                            class="bi bi-pencil"></i></button>
+                    <button class="btn btn-danger btn-sm me-2" (click)="DeleteDocuments(documentss.id_document)"><i
+                            class="bi bi-trash"></i></button>
+                </td>
                 <td>
-                    <button class="btn btn-info btn-sm me-2" (click)="viewDetails(documentss)"><i class="bi bi-eye"></i></button>
-                    
+                    <button class="btn btn-info btn-sm me-2" (click)="viewDetails(documentss)"><i
+                            class="bi bi-eye"></i></button>
+
                     <button class="btn btn-sm" [ngClass]="documentss.isVisible ? 'btn-success' : 'btn-danger'"
                         (click)="toggleVisibility(documentss)">
                         {{ documentss.isVisible ? 'Hiện' : 'Ẩn' }}
@@ -275,7 +294,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Chi tiết tài liệu</h5>
-                <button type="button" class="btn-close" (click)="hideModal(getModalInstance('categoryModal'))"></button>
+                <button type="button" class="btn-close" (click)="hideModal(getModalInstance('detailModal'))"></button>
             </div>
 
             <div class="modal-body">
@@ -286,10 +305,17 @@
 
                     <!-- Hiển thị PDF -->
                     <div class="pdf-viewer mt-3">
-                        <div *ngIf="fileUrl; else pdfError">
-                            <iframe [src]="getSafeUrl(fileUrl)" width="100%" height="500px" frameborder="0"
+                        <div *ngIf="selectedDocument?.file_path; else pdfError">
+                            <!-- <iframe [src]="getSafeUrl(fileUrl)" width="100%" height="500px" frameborder="0"
                                 (load)="handlePdfLoad()" (error)="handlePdfError($event)">
+                            </iframe> -->
+                            <iframe *ngIf="safeDetailPdfUrl" [src]="safeDetailPdfUrl" width="100%" height="500px"
+                                frameborder="0" (load)="handleDetailPdfLoad()">
                             </iframe>
+
+                            <div *ngIf="!safeDetailPdfUrl && !detailLoading" class="text-danger mt-2">
+                                ❌ Không thể tải tài liệu từ bất kỳ domain nào.
+                            </div>
                             <div *ngIf="!pdfLoaded" class="loading-indicator">
                                 <div class="spinner-border text-primary" role="status">
                                     <span class="visually-hidden">Loading...</span>
@@ -308,10 +334,8 @@
             </div>
 
             <div class="modal-footer">
-                <button class="btn btn-primary" (click)="downloadFile()" [disabled]="!pdfLoaded">
-                    <i class="fas fa-download"></i> Tải về
-                </button>
-                <button type="button" class="btn btn-secondary" (click)="hideModal(getModalInstance('detailModal'))"></button>
+                <button type="button" class="btn btn-secondary"
+                    (click)="hideModal(getModalInstance('detailModal'))">Đóng</button>
             </div>
         </div>
     </div>
@@ -385,8 +409,8 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let pdf of filteredPostPdf; let i = index">
-                                            <td>{{ i + 1 }}</td>
+                                        <tr *ngFor="let pdf of filteredPostPdf | paginate: { itemsPerPage: pageSize, currentPage: page }; let i = index">
+                                            <td>{{ (page - 1) * pageSize + i + 1 }}</td>
                                             <td>{{ pdf.fileName }}</td>
                                             <td>{{ pdf.filePath }}</td>
                                             <td>
@@ -401,6 +425,23 @@
                                 <div *ngIf="filteredPostPdf.length === 0" class="text-center">Không có file PDF nào.
                                 </div>
                             </div>
+                            <!-- Phân trang -->
+                            <nav aria-label="Page navigation" class="d-flex justify-content-center mt-3">
+                                <ul class="pagination">
+                                    <li class="page-item" [class.disabled]="page === 1">
+                                        <a class="page-link" (click)="page = page - 1">&laquo;</a>
+                                    </li>
+                            
+                                    <li class="page-item" *ngFor="let p of getPaginationArray1()" [class.active]="p === page"
+                                        [class.disabled]="p === '...'">
+                                        <a class="page-link" (click)="onPageClick(p)">{{ p }}</a>
+                                    </li>
+                            
+                                    <li class="page-item" [class.disabled]="page === totalPages1">
+                                        <a class="page-link" (click)="page = page + 1">&raquo;</a>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
