--- a/src/app/Admin/admin/feedbacks/feedbacks.component.html
+++ b/src/app/Admin/admin/feedbacks/feedbacks.component.html
@@ -14,7 +14,7 @@
 <!-- Cards Thống Kê -->
 <div class="row justify-content-center" style="background-color: #fff; padding: 10px 0px; margin: 0px 20px;">
     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-        <div class="card text-white small-card bg-primary">
+        <div class="card text-white small-card" style="background-color: rgb(58, 96, 162);">
             <div class="card-header" style="font-weight: 700;">TỔNG LIÊN HỆ</div>
             <div class="card-body">
                 <i class="bi bi-people-fill"></i>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-        <div class="card text-white small-card bg-success">
+        <div class="card text-white small-card" style="background-color: rgb(58, 162, 112)">
             <div class="card-header" style="font-weight: 700;">ĐÃ DUYỆT</div>
             <div class="card-body">
                 <i class="bi bi-check-circle-fill"></i>
@@ -34,7 +34,7 @@
     </div>
 
     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-        <div class="card text-white small-card bg-warning">
+        <div class="card text-white small-card" style="background-color: rgb(150, 158, 63)">
             <div class="card-header" style="font-weight: 700;">CHỜ DUYỆT</div>
             <div class="card-body">
                 <i class="bi bi-hourglass-split"></i>
@@ -44,7 +44,7 @@
     </div>
 
     <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6">
-        <div class="card text-white small-card bg-danger">
+        <div class="card text-white small-card" style="background-color: rgb(179, 78, 78)">
             <div class="card-header" style="font-weight: 700;">ĐÃ TỪ CHỐI</div>
             <div class="card-body">
                 <i class="bi bi-x-circle-fill"></i>
