--- a/src/app/Admin/Admin_Layouts/layouts.component.css
+++ b/src/app/Admin/Admin_Layouts/layouts.component.css
@@ -65,7 +65,7 @@
   display: flex;
   align-items: center;
   background: #f0f0f0;
-  border: 1px solid #ced4da;
+  border: 1px solid #000000;
   border-radius: 20px;
   padding: 5px 20px;
   width: 300px;
@@ -260,3 +260,5 @@ background-color: #007bff;
     box-shadow: 0px 0px 20px 0px rgba(0, 123, 255, 0.7);
   }
 }
+
+/**********************************/
